--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
     <script src="gestures.js"></script>
     <script>
-      /*
+
       AFRAME.registerComponent('markerhandler', {
       init: function () {
-        this.el.sceneEl.addEventListener('markerFound', () => {
+        this.el.sceneEl.addEventListener('click', () => {
           // redirect to custom URL e.g. google.com
           window.location = 'https://www.google.com/';
         })
       }
       });
-      */
+
     </script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs gesture-detector vr-mode-ui="enabled: false" id="scene">
