--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
               gltf-model="models/WaterBottle.glb"
               animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
               class="clickable"
-              gesture-handler>
+              gesture-handler
+              markerhandler>
 
               <a-entity text-geometry="value: TEST" position = "-1 1 1" id="testText"></a-entity>
             </a-entity>
